Added new Admin Tabs (No Functionality yet)

--- a/Exercise4_Digg_Webshop/Views/Admin/Index.cshtml
+++ b/Exercise4_Digg_Webshop/Views/Admin/Index.cshtml
@@ -14,5 +14,6 @@
         <input placeholder="Insert Email here..." type="email"/>
         <input placeholder="Insert Password here..." type="password" />
         <button type="button">Login</button>
+        <a style="color: #fff;" asp-controller="Admin" asp-action="EditProducts">PLACEHOLDER LOGIN</a>
     </form>
 </div>
