--- a/Exercise4_Digg_Webshop/wwwroot/css/site.css
+++ b/Exercise4_Digg_Webshop/wwwroot/css/site.css
@@ -39,7 +39,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     z-index: 50;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(25px) brightness(102%);
 }
 
     nav div:nth-of-type(1) {
@@ -1003,14 +1003,14 @@ nav {
 .contactus {
     background-color: #fff;
     grid-column: 1 / -1;
-    margin-top: 10vh;
-    height: 100vh;
+    margin-top: 15vh;
+    height: 120vh;
 }
 
     .contactus .image {
         position: relative;
         width: 100%;
-        height: 25%;
+        height: 30%;
         background-image: url(/Images/Products/Contact1.jpg);
         background-size: cover;
         background-attachment: fixed;
@@ -1076,3 +1076,431 @@ nav {
             color: #fff;
             background-image: linear-gradient(to right top, #181c42, #181c42);
         }
+
+/*ADMIN EDIT PRODUCT PAGE*/
+.editproducts_background {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(to right top, #ffeee6, #fee6de, #fdddd7, #fcd5d2, #facccf, #facad2, #f9c8d5, #f7c7d9, #f8cce2, #f7d1ea, #f7d7f2, #f6dcfa);
+}
+
+.admin_list {
+    margin: 10% auto;
+    width: 95vw;
+    min-height: 50vh;
+    background-color: #fff;
+}
+
+    .admin_list table th {
+        padding-bottom: .7rem;
+        border-bottom: #191d43 .5px solid;
+    }
+
+    .admin_list table tr {
+        margin-top: calc((.5 * 16) * 0.08333vw);
+        width: 90vw;
+        font-size: calc((.47 * 16) * 0.08333vw);
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        text-align: left;
+    }
+
+        .admin_list table tr td {
+            display: flex;
+            align-items: center;
+            height: calc((1 * 16) * 0.08333vw);
+            overflow: hidden;
+            width: 95%;
+            border: #01010138 .5px solid;
+        }
+
+        .admin_list table tr:hover {
+            cursor: default;
+        }
+
+        .admin_list table tr td:nth-of-type(5) {
+            overflow: visible;
+        }
+
+        .admin_list table tr td img {
+            width: 20%;
+            border-radius: 100%;
+            aspect-ratio: 1 / 1;
+        }
+
+        .admin_list table tr td:nth-of-type(9) {
+            grid-column: span 2;
+        }
+
+            .admin_list table tr td:nth-of-type(9) a {
+                border: none;
+                border-radius: 5px;
+                width: calc((2.1 * 16) * 0.08333vw);
+                aspect-ratio: 1 / .4;
+                margin-left: 1rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                transition: all .05s ease;
+            }
+
+                .admin_list table tr td:nth-of-type(9) a:hover {
+                    cursor: pointer;
+                    color: #fff;
+                    fill: #fff;
+                    filter: hue(-10deg);
+                }
+
+                .admin_list table tr td:nth-of-type(9) a svg {
+                    margin-right: 2px;
+                    transition: all .1s ease-in-out;
+                }
+
+                .admin_list table tr td:nth-of-type(9) a:hover svg {
+                    scale: 1.2;
+                }
+
+                .admin_list table tr td:nth-of-type(9) a:nth-of-type(1) {
+                    background-color: #1bff7a;
+                }
+
+                .admin_list table tr td:nth-of-type(9) a:nth-of-type(2) {
+                    background-color: #1bb3ff;
+                }
+
+                .admin_list table tr td:nth-of-type(9) a:nth-of-type(3) {
+                    background-color: #ff1b1b;
+                }
+
+
+
+.deleteconfirmation_Container {
+    position: absolute;
+    backdrop-filter: blur(10px);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding-top: 10%;
+    display: grid;
+    justify-content: center;
+}
+
+.deleteconfirmation {
+    width: 100%;
+}
+
+    .deleteconfirmation h1 span {
+        background-color: #ff1b1b;
+    }
+
+    .deleteconfirmation p {
+        margin: 2% 0%;
+    }
+
+    /*.deleteconfirmation button {
+        background-color: #ff1b1b;
+        color: #010101;
+        font-size: 1.6rem;
+        border: none;
+        width: calc((7 * 16) * 0.08333vw);
+        aspect-ratio: 1 / .3;
+        border-radius: 10px;
+        margin-left: 1rem;
+        transition: all .1s ease-in;
+    }
+
+        .deleteconfirmation button svg {
+            fill: #010101;
+            width: calc((.5 * 16) * 0.08333vw);
+            transition: all .1s ease-in;
+        }
+
+        .deleteconfirmation button:hover {
+            cursor: pointer;
+            border-radius: 8px;
+            color: #fff;
+            fill: #fff;
+            filter: hue(-10deg);
+            scale: 1.02;
+        }
+
+            .deleteconfirmation button:hover svg {
+                fill: #fff;
+                filter: hue(-10deg);
+                scale: 1.2;
+            }
+
+        .deleteconfirmation button:nth-of-type(2) {
+            background-color: #1bff7a;
+            margin-top: 4%;
+        }*/
+
+    
+    .deleteconfirmation .btn_container {
+        display: inline-block;
+        width: 70%;
+    }
+        .deleteconfirmation .btn_container span {
+            width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+    .deleteconfirmation a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ff1b1b;
+        color: #010101;
+        font-size: 1.6rem;
+        border: none;
+        width: calc((7 * 16) * 0.08333vw);
+        aspect-ratio: 1 / .3;
+        border-radius: 10px;
+        margin-left: 1rem;
+        transition: all .1s ease-in;
+    }
+
+        .deleteconfirmation a svg {
+            fill: #010101;
+            width: calc((.5 * 16) * 0.08333vw);
+            margin-right: .2rem;
+            transition: all .1s ease-in;
+        }
+
+        .deleteconfirmation a:hover {
+            cursor: pointer;
+            border-radius: 8px;
+            color: #fff;
+            fill: #fff;
+            filter: hue(-10deg);
+            scale: 1.02;
+        }
+
+            .deleteconfirmation a:hover svg {
+                fill: #fff;
+                filter: hue(-10deg);
+                scale: 1.2;
+            }
+
+        .deleteconfirmation a:nth-of-type(2) {
+            background-color: #1bff7a;
+        }
+
+
+
+
+/*EDIT SPECIFIC PRODUCT*/
+.editspecificbackground {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+}
+
+.productedit_container {
+    padding: 1% 0%;
+    margin: 20vh auto;
+    display: flex;
+    background-color: #ef9bb3;
+    background-color: #ce91e1;
+    width: 50vw;
+    display: grid;
+    grid-template-columns: calc((6 * 16) * 0.08333vw) 1fr;
+    grid-gap: 7rem;
+}
+
+    .productedit_container img {
+        width: calc((8 * 16) * 0.08333vw);
+        aspect-ratio: 1 / 1;
+        margin-left: 1rem;
+        border-radius: 100%;
+        object-fit: cover;
+        object-position: 0% 20%;
+    }
+
+    .productedit_container .input_container {
+        display: grid;
+        grid-template-columns: .2fr 1fr;
+        grid-row-gap: 1rem;
+        padding: 1%;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .productedit_container .input_container input {
+            height: calc((1 * 16) * 0.08333vw);
+            width: 65%;
+            border-radius: 45px;
+            border: none;
+            padding-left: 2%;
+        }
+
+        .productedit_container .input_container textarea {
+            height: calc((5 * 16) * 0.08333vw);
+            border-radius: 25px;
+            font-size: .5rem;
+            padding: 2% 2%;
+            border: none;
+            width: 65%;
+        }
+
+    .productedit_container span {
+        padding: 0% 5%;
+        grid-column: span 2;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .productedit_container a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: calc((1 * 150) * 0.08333vw);
+        aspect-ratio: 1 / .2;
+        border: none;
+        border-radius: 45px;
+        font-size: calc((.6 * 16) * 0.08333vw);
+        transition: all .1s ease;
+    }
+
+        .productedit_container a svg {
+            width: 4%;
+            margin-right: 2%;
+            transition: all .1s ease;
+        }
+
+        .productedit_container a:hover {
+            cursor: pointer;
+            color: #fff;
+        }
+
+            .productedit_container a:hover svg {
+                fill: #fff;
+                transform: scale(1.1);
+            }
+
+        .productedit_container a:nth-of-type(1) {
+            background-color: #ff1b1b;
+        }
+
+        .productedit_container a:nth-of-type(2) {
+            background-color: #1bff7a;
+        }
+/*View SPECIFIC PRODUCT*/
+
+.editspecificbackground {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+}
+
+.productview_container {
+    padding: 1% 0%;
+    margin: 20vh auto;
+    display: flex;
+    background-color: #ce91e1;
+    background-color: #ef9bb3;
+    width: 50vw;
+    display: grid;
+    grid-template-columns: calc((6 * 16) * 0.08333vw) 1fr;
+    grid-gap: 7rem;
+}
+
+    .productview_container img {
+        width: calc((8 * 16) * 0.08333vw);
+        aspect-ratio: 1 / 1;
+        margin-left: 1rem;
+        border-radius: 100%;
+        object-fit: cover;
+        object-position: 0% 20%;
+    }
+
+    .productview_container .input_container {
+        display: grid;
+        grid-template-columns: .2fr 1fr;
+        grid-row-gap: 1rem;
+        padding: 1%;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .productview_container .input_container input:hover {
+            cursor: default;
+        }
+
+        .productview_container .input_container textarea:hover {
+            cursor: default;
+        }
+
+        .productview_container .input_container input {
+            height: calc((1 * 16) * 0.08333vw);
+            width: 65%;
+            border-radius: 45px;
+            border: none;
+            padding-left: 2%;
+        }
+
+        .productview_container .input_container textarea {
+            height: calc((5 * 16) * 0.08333vw);
+            border-radius: 25px;
+            font-size: .5rem;
+            padding: 2% 2%;
+            border: none;
+            width: 65%;
+        }
+
+    .productview_container span {
+        padding: 0% 5%;
+        grid-column: span 2;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .productview_container a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: calc((1 * 150) * 0.08333vw);
+        aspect-ratio: 1 / .2;
+        border: none;
+        border-radius: 45px;
+        font-size: calc((.6 * 16) * 0.08333vw);
+        transition: all .1s ease;
+    }
+
+        .productview_container a svg {
+            width: 4%;
+            margin-right: 2%;
+            transition: all .1s ease;
+        }
+
+        .productview_container a:hover {
+            cursor: pointer;
+            color: #fff;
+        }
+
+            .productview_container a:hover svg {
+                fill: #fff;
+                transform: scale(1.1);
+            }
+
+        .productview_container a:nth-of-type(1) {
+            background-color: #ff1b1b;
+        }
+
+        .productview_container a:nth-of-type(2) {
+            background-color: #1bff7a;
+        }
+    
