--- a/Exercise4_Digg_Webshop/Views/Admin/Add.cshtml
+++ b/Exercise4_Digg_Webshop/Views/Admin/Add.cshtml
@@ -1,52 +1,48 @@
 ﻿@model Product
 
 
-
-
-    <div class="productedit_container">
-        <img src="~/Images/Products/@Model.ImageUrl" />
-    <form asp-action="Edit">
+<div class="Addproduct_container">
+        <img src="" />
+    <form asp-action="Add">
         <div class="input_container">
             <label>ImageUrl</label>
-            <input asp-for="ImageUrl" value="@Model.ImageUrl" />
+            <input asp-for="ImageUrl" />
             <span asp-validation-for="ImageUrl" class="text-danger"></span>
-            
+
             <label>Product Name</label>
-            <input asp-for="ProductName" value="@Model.ProductName" />
+            <input asp-for="ProductName" />
             <span asp-validation-for="ProductName" class="text-danger"></span>
-            
+
             <label>Description</label>
             <textarea asp-for="ProductDescription" rows="5" cols="60" style="resize: none;">@Model.ProductDescription</textarea>
             <span asp-validation-for="ProductDescription" class="text-danger"></span>
-            
+
             <label>Category</label>
-            <input asp-for="ProductCategory" value="@Model.ProductCategory" />
+            <input asp-for="ProductCategory" />
             <span asp-validation-for="ProductCategory" class="text-danger"></span>
 
             <label>Rating</label>
-            <input asp-for="Rating" value="@Model.Rating"/>
+            <input asp-for="Rating" />
             <span asp-validation-for="Rating" class="text-danger"></span>
 
             <label>Baseprice</label>
-            <input asp-for="BasePrice" value="@Model.BasePrice" />
+            <input asp-for="BasePrice" />
             <span asp-validation-for="BasePrice" class="text-danger"></span>
 
             <label>PromotionPrice</label>
-            <input asp-for="PromotionPrice" value="@Model.PromotionPrice" />
+            <input asp-for="PromotionPrice" />
             <span asp-validation-for="PromotionPrice" class="text-danger"></span>
         </div>
         <span>
-            
             <a asp-controller="Admin" asp-action="EditProducts">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.2.1 by fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" /></svg>
                 Go back
             </a>
             <label class="ApplyChanges">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.1 by fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z" /></svg>
-                <input class="inputbtn" type="submit" value="Apply Changes" />
+                <input class="inputbtn" type="submit" value="Add Product" />
             </label>
         </span>
     </form>
-    </div>
-
-<div class="editspecificbackground"></div>
+</div>
+<div class="addspecificbackground"></div>
