--- a/Exercise4_Digg_Webshop/Views/Blog/Index.cshtml
+++ b/Exercise4_Digg_Webshop/Views/Blog/Index.cshtml
@@ -1,7 +1,12 @@
-﻿
+﻿@using Exercise4_Digg_Webshop.Models
+
+
+
 <partial name="_Navbar" />
 <partial name="_Breadcrumb" />
 
+
+<a asp-controller="Blog" asp-action="Edit">Edit</a>
 <div class="blog_container">
     <div class="blog">
         <div class="img">
