--- a/Exercise4_Digg_Webshop/Views/Admin/Edit.cshtml
+++ b/Exercise4_Digg_Webshop/Views/Admin/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Product
 
 
-
+@if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+{
 
     <div class="productedit_container">
         <img src="~/Images/Products/@Model.ImageUrl" />
@@ -50,3 +51,5 @@
     </div>
 
 <div class="editspecificbackground"></div>
+
+}
